# ssg-rust-workshop-pt3

./: .gitignore  Cargo.toml  README.md  devenv.nix  histogram.h5
benches/: bench.rs
src/: lib.rs
