[package]
name = "rust-workshop-3"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_workshop_3"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.7.0"

[dependencies]
hdf5 = { package = "hdf5-metno", version = "0.10.1", features = ["static"] }
ndarray = "0.16.1"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
